--- a/bugreport.html
+++ b/bugreport.html
@@ -10,3 +10,4 @@ Alpha	2.0.1 		Fixes including links and hyperlinks, addes photos and fixed table
 Beta	2.0.2 		Fixed Chrome and Firefox menubar incompatability, updated index.html
 Beta	2.0.3x 		Photo table in rentals to be fixed along with titles on that page.
 Beta	2.0.4x 		Links in <p> on home page to be fixed.
+Beta	2.1.xx		JQuery photo carousel to be added.
