--- a/strony/pl/glowna.html
+++ b/strony/pl/glowna.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=900"/>
 		<link rel="stylesheet" type="text/css" href="glowna/mainpagetheme.css">
 		<link type="text/css" rel="stylesheet" href="glowna/mainmenutheme.css">
+<!--	<link type="text/css" rel="stylesheet" href="font.css" -->
 		<!-- MENU -->
 					<div id="sticker">
 						<div>
