--- a/changelog.html
+++ b/changelog.html
@@ -8,6 +8,7 @@ Beta	1.1 		Cleaned up files
 Alpha	2.0 		New site, less pages, placeholders made, new menu, new navigation
 Alpha	2.0.1 		Fixes including links and hyperlinks, addes photos and fixed tables
 Beta	2.0.2 		Fixed Chrome and Firefox menubar incompatability, updated index.html
-Beta	2.0.3x 		Photo table in rentals to be fixed along with titles on that page.
-Beta	2.0.4x 		Links in <p> on home page to be fixed.
+Beta	2.0.3 		Fixed CloudFlare FTP issue
+Beta	2.0.4x 		Photo table in rentals to be fixed along with titles on that page.
+Beta	2.0.5x 		Links in <p> on home page to be fixed.
 Beta	2.1.xx		JQuery photo carousel to be added.
